--- a/src/app/pages/users/users-main/users-main.component.html
+++ b/src/app/pages/users/users-main/users-main.component.html
@@ -22,19 +22,17 @@
                             <td mat-cell *matCellDef="let element"> {{element.id}} </td>
                         </ng-container>
                         <ng-container matColumnDef="username">
-                          <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
+                          <th mat-header-cell *matHeaderCellDef mat-sort-header> USERNAME </th>
                           <td mat-cell *matCellDef="let element"> {{element.username}} </td>
                       </ng-container>
+
+
                         <!-- name Column -->
                         <ng-container matColumnDef="firstName">
                             <th mat-header-cell *matHeaderCellDef mat-sort-header> NOMBRE </th>
-                            <td mat-cell *matCellDef="let element"> {{element.firstName}} </td>
+                            <td mat-cell *matCellDef="let element">
+                               {{element.firstName}} {{element.additionalName}} {{element.lastName}} {{element.secondName}} </td>
                         </ng-container>
-                        <ng-container matColumnDef="additionalName">
-                            <th mat-header-cell *matHeaderCellDef mat-sort-header> SEGUNDO NOMBRE </th>
-                            <td mat-cell *matCellDef="let element"> {{element.additionalName}} </td>
-                        </ng-container>
-
                         <!-- isActive Column -->
                         <ng-container matColumnDef="isActive">
                             <th mat-header-cell *matHeaderCellDef mat-sort-header> ESTATUS </th>
