:necktie: updated checklist by partner and controls status

--- a/src/app/pages/users/users-create/users-create.component.html
+++ b/src/app/pages/users/users-create/users-create.component.html
@@ -4,7 +4,7 @@
         nbSpinnerStatus="danger"
         nbSpinnerSize="large"
         nbSpinnerMessage="Cargando ...">
-            <mat-card-title>Agregar Usuario</mat-card-title>
+            <mat-card-title>Usuario</mat-card-title>
             <mat-card-content nb-card-body>
                 <!--mat dialog content-->
                 <mat-dialog-content>
