--- a/src/app/pages/transport-types/transport-type-main/transport-type-main.component.html
+++ b/src/app/pages/transport-types/transport-type-main/transport-type-main.component.html
@@ -32,9 +32,8 @@
                       <ng-container matColumnDef="capacities">
                         <th mat-header-cell *matHeaderCellDef mat-sort-header>CAPACIDADES</th>
                         <td mat-cell *matCellDef="let element">
-                        <button  mat-icon-button color="primary" appearance="outline" (click)="showCapacities(element)">
-                          <mat-icon>list</mat-icon> Capacidades
-                      </button>
+
+                      <mat-icon matBadgeColor="primary" (click)="showCapacities(element)">assignment</mat-icon>
                         </td>
                     </ng-container>
 
