--- a/src/app/pages/check-list/check-list-main/check-list-main.component.html
+++ b/src/app/pages/check-list/check-list-main/check-list-main.component.html
@@ -55,22 +55,44 @@
             <ng-container matColumnDef="pallets">
               <th mat-header-cell *matHeaderCellDef > PALLETS </th>
               <td mat-cell *matCellDef="let element">
-                <button mat-icon-button color="primary" (click)="addPallet(element)" [disabled]="element.isActive === false">
-                  <mat-icon><span class="material-symbols-outlined">
-                    switch_access_shortcut_add
-                    </span></mat-icon>
-                </button>
-
+                  <mat-icon matBadge={{element.pallets.length}} matBadgeColor="primary" (click)="addPallet(element)">assignment</mat-icon>
+                    <!-- Include text description of the icon's meaning for screen-readers -->
               </td>
             </ng-container>
+
+            <ng-container matColumnDef="status">
+              <th mat-header-cell *matHeaderCellDef> ESTATUS </th>
+              <td mat-cell *matCellDef="let element">
+                <nb-tag-list>
+                   <nb-tag status="primary" appearance="outline" *ngIf="element.status ==='open'" text="open"></nb-tag>
+                    <nb-tag status="warning" appearance="outline" *ngIf="element.status==='close'" text="close"></nb-tag>
+              </nb-tag-list>
+              </td>
+            </ng-container>
+
             <ng-container matColumnDef="actions">
               <th mat-header-cell *matHeaderCellDef > ACCIONES </th>
               <td mat-cell *matCellDef="let element">
-                <button mat-icon-button color="primary" (click)="editarClient(element)"><mat-icon>edit</mat-icon>
-                </button>
-                <button mat-icon-button color="warn" (click)="deleteClient(element)" [disabled]="element.isActive === false">
-                  <mat-icon>delete</mat-icon>
-                </button>
+
+              <div class="row">
+                <div class="col-sm-4">
+                  <button mat-icon-button color="primary" (click)="closeRemision(element)" [disabled]="element.status === 'close'" ><mat-icon>done_all</mat-icon>
+                  </button>
+                </div>
+                <div class="col-sm-4">
+                  <button mat-icon-button color="primary" (click)="editarClient(element)"><mat-icon>edit</mat-icon>
+                  </button>
+                </div>
+                <div class="col-sm-4">
+                  <button mat-icon-button color="warn" (click)="deleteClient(element)" [disabled]="element.status === 'close'">
+                    <mat-icon>delete</mat-icon>
+                  </button>
+                </div>
+              </div>
+
+
+
+
 
               </td>
             </ng-container>
@@ -97,6 +119,8 @@
     </nb-card-body>
   </nb-card>
 </div>
+
+
 
 
 
