--- a/src/app/pages/check-list/check-list-main/check-list-main.component.scss
+++ b/src/app/pages/check-list/check-list-main/check-list-main.component.scss
@@ -63,3 +63,12 @@ mat-grid-tile {
   max-width: 360px;
   text-align: center;
 }
+:host {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.demo-section + .demo-section {
+  margin-top: 16px;
+}
