--- a/src/app/pages/check-list/check-list-pallet/check-list-pallet.component.html
+++ b/src/app/pages/check-list/check-list-pallet/check-list-pallet.component.html
@@ -1,19 +1,35 @@
 
 <div class="row" style="position: relative;">
-  <div class="col-md-12 col-lg-6 col-xxxl-4" style="position: relative;">
+  <div class="col-md-12 col-lg-4 col-xxxl-4" style="position: relative;">
     <nb-card status="primary">
       <nb-card-header>Remision : {{checkList?.remision}}
         <nb-badge text={{checkList?.date}} status="danger" position="top left"></nb-badge>
       </nb-card-header>
       <nb-card-body>
         <mat-list role="list">
-          <mat-list-item role="listitem">Total Pallets : {{this.totalRegistros}}</mat-list-item>
-          <mat-list-item role="listitem">Cantidad total: {{totalCantidad}}</mat-list-item>
+          <div matBadge={{this.totalRegistros}} matBadgeOverlap="false" class="demo-section">Pallets Total</div>
+        </mat-list>
+        <mat-list role="list">
+          <div matBadge={{totalPalletDTO.total}} matBadgeOverlap="false" class="demo-section">Cantidad Total</div>
         </mat-list>
       </nb-card-body>
     </nb-card>
   </div>
-  <div *ngIf="response?.totalDuplicated>0" class="col-md-12 col-lg-6 col-xxxl-4" style="position: relative;">
+
+  <div class="col-md-12 col-lg-4 col-xxxl-4" style="position: relative;" *ngIf="totalPalletDTO.total !=0">
+    <nb-card status="primary">
+      <nb-card-header>Productos
+        <nb-badge text={{checkList?.date}} status="danger" position="top left"></nb-badge>
+      </nb-card-header>
+      <nb-card-body>
+        <mat-list role="list" *ngFor="let item of totalPalletDTO.productoTotal | keyvalue">
+          <div matBadge={{item.value}} matBadgeOverlap="false" class="demo-section">{{item.key}}</div>
+        </mat-list>
+      </nb-card-body>
+    </nb-card>
+  </div>
+
+  <div *ngIf="response?.totalDuplicated>0" class="col-md-12 col-lg-4 col-xxxl-4" style="position: relative;">
     <nb-card status="danger">
       <nb-card-header>Duplicados
 
@@ -49,6 +65,7 @@
                   <mat-form-field appearance="legacy">
                     <mat-label>Cantidad de Pallets</mat-label>
                     <input matInput  formControlName="cantidad" placeholder="Digita Cantidad" >
+                    <mat-error *ngIf="formTemplate.controls.cantidad.errors?.numeric">Valor numerico  </mat-error>
                   </mat-form-field>
                 </div>
               </div>
@@ -97,7 +114,7 @@
 
               <div class="col-sm-3">
                 <div class="form-group">
-                  <button mat-flat-button color="primary" [disabled]="temple()===true">Generar</button>
+                  <button mat-flat-button color="primary" [disabled]="temple()===true" [disabled]="status === 'close'">Generar</button>
                   <button mat-flat-button type="button" color="warn" (click)="resetTemplate()">Limpiar</button>
                 </div>
               </div>
@@ -121,7 +138,7 @@
                       <mat-label>Lincecia</mat-label>
                       <input matInput  formControlName="ua"
                       >
-                      <mat-error *ngIf="creds.controls.ua.errors?.unique">Licencia duplicada  </mat-error>
+                      <mat-error *ngIf="creds.controls.ua.errors?.unique">Licencia Duplicada  </mat-error>
                     </mat-form-field >
 
                 </div>
@@ -129,6 +146,7 @@
                    <mat-form-field appearance="legacy">
                       <mat-label>Cantidad * Tarima</mat-label>
                       <input matInput  formControlName="amount">
+                      <mat-error *ngIf="creds.controls.amount.errors?.numeric">Valor numerico  </mat-error>
                     </mat-form-field>
                 </div>
                 <div class="col-sm-2">
@@ -208,7 +226,7 @@
 
             </div>
                   <div class="col-sm-2">
-                <button mat-flat-button color="primary" type="submit" (click)="submit()">Guardar</button>
+                <button mat-flat-button color="primary" type="submit" (click)="submit()" [disabled]="status === 'close'">Guardar</button>
               </div>
             <!-- end grid-->
           </nb-card-body>
@@ -250,12 +268,20 @@
                   <th mat-header-cell *matHeaderCellDef mat-sort-header > NO.PALLET </th>
                   <td mat-cell *matCellDef="let element"> {{dataSource.filteredData.indexOf(element) +1}}  </td>
                 </ng-container>
+                <ng-container matColumnDef="name">
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header > PRODUCTO </th>
+                  <td mat-cell *matCellDef="let element"> {{element.product.name}}  </td>
+                </ng-container>
+                <ng-container matColumnDef="code">
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header > CODIGO </th>
+                  <td mat-cell *matCellDef="let element"> {{element.product.code}}  </td>
+                </ng-container>
                 <ng-container matColumnDef="ua">
                   <th mat-header-cell *matHeaderCellDef mat-sort-header > LINCENCIA</th>
                   <td mat-cell *matCellDef="let element"> {{element.ua}} </td>
                 </ng-container>
                 <ng-container matColumnDef="amount">
-                  <th mat-header-cell *matHeaderCellDef mat-sort-header > CANTIDAD * TARIMA </th>
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header > CANTIDAD </th>
                   <td mat-cell *matCellDef="let element"> {{element.amount}} </td>
                 </ng-container>
                 <ng-container matColumnDef="um">
@@ -273,9 +299,9 @@
                 <ng-container matColumnDef="actions">
                   <th mat-header-cell *matHeaderCellDef > ACCIONES </th>
                   <td mat-cell *matCellDef="let element">
-                    <button mat-icon-button color="primary" (click)="editDialog(element)"><mat-icon>edit</mat-icon>
+                    <button mat-icon-button color="primary" (click)="editDialog(element)" [disabled]="status === 'close'"><mat-icon>edit</mat-icon>
                     </button>
-                    <button mat-icon-button color="warn" (click)="deleteDialog(element)">
+                    <button mat-icon-button color="warn" (click)="deleteDialog(element)" [disabled]="status === 'close'">
                       <mat-icon>delete</mat-icon>
                     </button>
                   </td>
