:necktie: added tooltip in autocomplete

--- a/src/app/pages/check-list/check-list-create/check-list-create.component.html
+++ b/src/app/pages/check-list/check-list-create/check-list-create.component.html
@@ -76,9 +76,10 @@
 
         <div class="col-sm-3">
            <div class="form-group">
-         <mat-form-field class="example-full-width" #field floatLabel="always" appearance="outline" >
+         <mat-form-field class="example-full-width" #field floatLabel="always" appearance="legacy" >
            <mat-label>Linea de Transporte</mat-label>
            <input type="text"
+                  matTooltip="Despegable"
                   placeholder="Selecciona Linea de Transporte"
                   aria-label="Linea de Transporte"
                   matInput
@@ -110,9 +111,10 @@
 
          <div class="col-sm-3">
            <div class="form-group">
-             <mat-form-field class="example-full-width" #field floatLabel="always" appearance="outline" >
+             <mat-form-field class="example-full-width" #field floatLabel="always" appearance="legacy" >
              <mat-label>Tipo de Transporte</mat-label>
              <input type="text"
+                   matTooltip="Despegable"
                    placeholder="Selecciona Tipo de Transporte"
                    aria-label="Tipo de Transporte"
                    matInput
@@ -133,9 +135,10 @@
 
          <div class="col-sm-3">
            <div class="form-group">
-             <mat-form-field class="example-full-width" #field floatLabel="always" appearance="outline">
+             <mat-form-field class="example-full-width" #field floatLabel="always" appearance="legacy">
              <mat-label>Capacidad de Transporte</mat-label>
              <input type="text"
+                   matTooltip="Despegable"
                    placeholder="Selecciona Capacidad de Transporte"
                    aria-label="Capacidad de Transporte"
                    matInput
@@ -209,9 +212,10 @@
 
          <div class="col-sm-3">
            <div class="form-group">
-             <mat-form-field class="example-full-width" #field floatLabel="always" appearance="outline" >
+             <mat-form-field class="example-full-width" #field floatLabel="always" appearance="legacy" >
              <mat-label>Vigilancia</mat-label>
              <input type="text"
+                   matTooltip="Despegable"
                    placeholder="Selecciona Personal de vigilancia"
                    aria-label="Personal de Vigilancia"
                    matInput
@@ -232,9 +236,10 @@
 
          <div class="col-sm-3">
            <div class="form-group">
-             <mat-form-field class="example-full-width" #field floatLabel="always" appearance="outline" >
+             <mat-form-field class="example-full-width" #field floatLabel="always" appearance="legacy" >
              <mat-label>Responsable</mat-label>
              <input type="text"
+                   matTooltip="Despegable"
                    placeholder="Calidad / Jefe de turno"
                    aria-label="Calidad / Jefe de turno"
                    matInput
