--- a/src/app/pages/persons/persons-create/persons-create.component.html
+++ b/src/app/pages/persons/persons-create/persons-create.component.html
@@ -53,7 +53,8 @@
               <div class="form-group">
                 <mat-form-field class="example-full-width" #field floatLabel="always" appearance="legacy" >
                   <mat-label>Puesto</mat-label>
-                  <input type="text" matTooltip="Despegable" placeholder="Selecciona un puesto" aria-label="Number" matInput formControlName="profession"
+                  <input type="text" matTooltip="Despegable" placeholder="Selecciona un puesto"
+                  aria-label="Number" matInput formControlName="profession"
                     [matAutocomplete]="auto" [ngClass]="{ 'is-invalid': submitted && f.profession.errors }">
                   <mat-autocomplete #auto="matAutocomplete" (optionSelected)="optionSelected($event.option.value)"
                     [displayWith]="displayProperty">
@@ -97,3 +98,4 @@
     </mat-card>
   </form>
 </section>
+
