--- a/src/app/pages/users/users-main/users-main.component.html
+++ b/src/app/pages/users/users-main/users-main.component.html
@@ -28,11 +28,17 @@
 
 
                         <!-- name Column -->
-                        <ng-container matColumnDef="firstName">
+                        <ng-container matColumnDef="firstName" >
                             <th mat-header-cell *matHeaderCellDef mat-sort-header> NOMBRE </th>
                             <td mat-cell *matCellDef="let element">
                                {{element.firstName}} {{element.additionalName}} {{element.lastName}} {{element.secondName}} </td>
                         </ng-container>
+
+                        <ng-container matColumnDef="profession">
+                          <th mat-header-cell *matHeaderCellDef mat-sort-header> PUESTO </th>
+                          <td mat-cell *matCellDef="let element">
+                             {{element.profession.name}}   </td>
+                      </ng-container>
                         <!-- isActive Column -->
                         <ng-container matColumnDef="isActive">
                             <th mat-header-cell *matHeaderCellDef mat-sort-header> ESTATUS </th>
@@ -43,6 +49,15 @@
                               </nb-tag-list>
                             </td>
                         </ng-container>
+                        <ng-container matColumnDef="isUser">
+                          <th mat-header-cell *matHeaderCellDef mat-sort-header> USUARIO </th>
+                          <td mat-cell *matCellDef="let element">
+                            <nb-tag-list>
+                              <nb-tag status="primary" appearance="outline" *ngIf="element.isUser" text="Usuario"></nb-tag>
+                              <nb-tag status="warning" appearance="outline" *ngIf="!element.isUser" text="Sin Usuario"></nb-tag>
+                            </nb-tag-list>
+                          </td>
+                      </ng-container>
                         <ng-container matColumnDef="isResponsible">
                           <th mat-header-cell *matHeaderCellDef mat-sort-header> RESPONSABLE </th>
                           <td mat-cell *matCellDef="let element">
