:necktie: added checkout and filter by process checklist

--- a/src/app/pages/check-out/check-out-create/check-out-create.component.html
+++ b/src/app/pages/check-out/check-out-create/check-out-create.component.html
@@ -1,7 +1,7 @@
 <section>
   <mat-card>
     <mat-card-title>Check List</mat-card-title>
-    <mat-card-subtitle>Check Inn</mat-card-subtitle>
+    <mat-card-subtitle>Check Out</mat-card-subtitle>
 
     <mat-card-content>
 
@@ -72,7 +72,6 @@
           </div>
         </div>
       </div>
-
 
         <mat-card-actions align="end">
           <mat-dialog-actions align="end">
