--- a/src/app/pages/check-list/check-list-main/check-list-main.component.html
+++ b/src/app/pages/check-list/check-list-main/check-list-main.component.html
@@ -18,12 +18,15 @@
           <table mat-table [dataSource]="dataSource" matSort (matSortChange)="sortData($event)">
             <!-- Id Column -->
             <ng-container matColumnDef="id">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header >ID </th>
-              <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+              <th mat-header-cell *matHeaderCellDef mat-sort-header >ID</th>
+              <td mat-cell *matCellDef="let element"> {{element.id}}
+
+
+              </td>
             </ng-container>
 
             <ng-container matColumnDef="remision">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header >REMISION </th>
+              <th mat-header-cell *matHeaderCellDef mat-sort-header >REMISION</th>
               <td mat-cell *matCellDef="let element"> {{element.remision}} </td>
             </ng-container>
 
@@ -33,12 +36,12 @@
             </ng-container>
 
             <ng-container matColumnDef="transportLine">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header >LINEA TRANSPORTE </th>
+              <th mat-header-cell *matHeaderCellDef mat-sort-header >LINEA</th>
               <td mat-cell *matCellDef="let element"> {{element.transportLine.name}} </td>
             </ng-container>
 
             <ng-container matColumnDef="transportType">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header>TIPO TRANSPORTE </th>
+              <th mat-header-cell *matHeaderCellDef mat-sort-header>TIPO</th>
               <td mat-cell *matCellDef="let element">
                 {{element.transportCapacity.transportType.name}}
                 {{element.transportCapacity.capacity}}
@@ -48,12 +51,12 @@
 
 
             <ng-container matColumnDef="noSello">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header >NO. SELLO </th>
-              <td mat-cell *matCellDef="let element"> {{element.noSello}} </td>
+              <th mat-header-cell *matHeaderCellDef mat-sort-header >NO. SELLO</th>
+              <td mat-cell *matCellDef="let element">{{element.noSello}}</td>
             </ng-container>
 
             <ng-container matColumnDef="pallets">
-              <th mat-header-cell *matHeaderCellDef > PALLETS </th>
+              <th mat-header-cell *matHeaderCellDef >PALLETS</th>
               <td mat-cell *matCellDef="let element">
                   <mat-icon matBadge={{element.pallets.length}} matBadgeColor="primary" (click)="addPallet(element)">assignment</mat-icon>
                     <!-- Include text description of the icon's meaning for screen-readers -->
@@ -61,7 +64,7 @@
             </ng-container>
 
             <ng-container matColumnDef="status">
-              <th mat-header-cell *matHeaderCellDef> ESTATUS </th>
+              <th mat-header-cell *matHeaderCellDef> ESTATUS</th>
               <td mat-cell *matCellDef="let element">
                 <nb-tag-list>
                    <nb-tag status="primary" appearance="outline" *ngIf="element.status ==='open'" text="open"></nb-tag>
