--- a/src/app/pages/check-list/check-list-pallet/check-list-pallet.component.html
+++ b/src/app/pages/check-list/check-list-pallet/check-list-pallet.component.html
@@ -1,43 +1,54 @@
 
 <div class="row" style="position: relative;">
-  <div class="col-md-12 col-lg-4 col-xxxl-4" style="position: relative;">
+  <div class="col-md-6 col-lg-4 col-xxxl-4" style="position: relative;">
     <nb-card status="primary">
       <nb-card-header>Remision : {{checkList?.remision}}
         <nb-badge text={{checkList?.date}} status="danger" position="top left"></nb-badge>
       </nb-card-header>
       <nb-card-body>
-        <mat-list role="list">
-          <div matBadge={{this.totalRegistros}} matBadgeOverlap="false" class="demo-section">Pallets Total</div>
-        </mat-list>
-        <mat-list role="list">
-          <div matBadge={{totalPalletDTO.total}} matBadgeOverlap="false" class="demo-section">Cantidad Total</div>
-        </mat-list>
+        <div class="row">
+          <div class="col-sm-8">Total de Pallets :
+          </div>
+          <div class="col-sm-4"> <nb-tag status="primary" size="small" appearance="filled" text={{this.totalRegistros}}></nb-tag></div>
+        </div>
+        <div class="row">
+          <div class="col-sm-8">Cantidad Total :
+
+          </div>
+          <div class="col-sm-4"><nb-tag status="primary" size="small" appearance="filled" text={{totalPalletDTO.total}}></nb-tag> </div>
+        </div>
+
       </nb-card-body>
     </nb-card>
   </div>
 
-  <div class="col-md-12 col-lg-4 col-xxxl-4" style="position: relative;" *ngIf="totalPalletDTO.total !=0">
+  <div class="col-md-4 col-lg-4 col-xxxl-4" style="position: relative;" *ngIf="totalPalletDTO.total !=0">
     <nb-card status="primary">
       <nb-card-header>Productos
         <nb-badge text={{checkList?.date}} status="danger" position="top left"></nb-badge>
       </nb-card-header>
       <nb-card-body>
-        <mat-list role="list" *ngFor="let item of totalPalletDTO.productoTotal | keyvalue">
-          <div matBadge={{item.value}} matBadgeOverlap="false" class="demo-section">{{item.key}}</div>
-        </mat-list>
+        <div class="row" *ngFor="let item of totalPalletDTO.productoTotal | keyvalue">
+          <div class="col-sm-4">{{item.key}}
+          </div>
+          <div class="col-sm-6">Total de Pallets:
+          </div>
+          <div class="col-sm-2"> <nb-tag status="primary" size="small" appearance="filled" text={{item.value}}></nb-tag></div>
+        </div>
       </nb-card-body>
     </nb-card>
   </div>
 
   <div *ngIf="response?.totalDuplicated>0" class="col-md-12 col-lg-4 col-xxxl-4" style="position: relative;">
     <nb-card status="danger">
-      <nb-card-header>Duplicados
+      <nb-card-header>Licencias Duplicadas
 
       </nb-card-header>
       <nb-card-body>
-        <mat-list role="list" >
-          <mat-list-item role="listitem" *ngFor="let item of response?.uas">UA: {{item}}</mat-list-item>
-        </mat-list>
+        <div class="row" *ngFor="let item of response?.uas">
+          <div class="col-sm-12"><nb-tag status="danger" size="small" appearance="filled" text={{item}}></nb-tag>
+          </div>
+        </div>
       </nb-card-body>
     </nb-card>
   </div>
@@ -264,7 +275,7 @@
             <div class="mat-elevation-z8">
               <table mat-table [dataSource]="dataSource" matSort (matSortChange)="sortData($event)" >
                 <!-- Name Column -->
-                <ng-container matColumnDef="noPallet">
+                <ng-container matColumnDef="noPallet" class="make-gold">
                   <th mat-header-cell *matHeaderCellDef mat-sort-header > NO.PALLET </th>
                   <td mat-cell *matCellDef="let element"> {{dataSource.filteredData.indexOf(element) +1}}  </td>
                 </ng-container>
@@ -308,7 +319,7 @@
                 </ng-container>
 
                 <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                <tr mat-row [ngClass]="{'make-gold': row.checkOut !== null}" *matRowDef="let row; columns: displayedColumns;"></tr>
 
                 <!-- Row shown when there is no matching data. -->
                 <tr class="mat-row" *matNoDataRow>
