--- a/src/app/pages/check-list/check-list-pallet/check-list-pallet.component.scss
+++ b/src/app/pages/check-list/check-list-pallet/check-list-pallet.component.scss
@@ -139,3 +139,12 @@ mat-grid-tile {
 .wrap-label-text {
   white-space: normal;
 }
+:host {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.make-gold {
+  background-color: rgb(239, 251, 191)
+}
