--- a/src/app/pages/check-out/check-out-pallet/check-out-pallet.component.html
+++ b/src/app/pages/check-out/check-out-pallet/check-out-pallet.component.html
@@ -1,5 +1,5 @@
 <section>
-  <h5 mat-dialog-title mat-card-title>Remision De Salida {{checkOutRemision}} </h5>
+  <h5 mat-dialog-title mat-card-title>Remision De Salida {{result[0].checkOutRemision}} </h5>
 
       <!--mat dialog content-->
       <mat-dialog-content mat-card-content>
