--- a/src/app/pages/check-list/check-list-main/check-list-main.component.html
+++ b/src/app/pages/check-list/check-list-main/check-list-main.component.html
@@ -1,115 +1,111 @@
-<div class="col-md-12">
-  <nb-card accent="primary">
-    <nb-card-header>Check List </nb-card-header>
-    <nb-card-body>
-      <section>
-        <div class="example-button-row">
-          <button mat-flat-button color="primary" (click)="openDialog()">Agregar</button>
-        </div>
-      </section>
-      <section>
-        <!-- filter -->
-        <mat-form-field appearance="standard">
-          <mat-label>Buscar </mat-label>
-          <input matInput (keyup)="applyFilter($event)" placeholder="Search" #input>
-        </mat-form-field>
-        <!-- end filter -->
-        <div class="mat-elevation-z8">
-          <table mat-table [dataSource]="dataSource" matSort (matSortChange)="sortData($event)">
-            <!-- Id Column -->
-            <ng-container matColumnDef="id">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header >ID</th>
-              <td mat-cell *matCellDef="let element"> {{element.id}}
+<nb-card status="primary">
+  <nb-card-header>Check-In</nb-card-header>
+  <nb-card-body>
+    <section>
+      <div class="example-button-row">
+        <button nbButton hero shape="semi-round" size="small" status="primary" (click)="openDialog()">Agregar</button>
+      </div>
+  </section>
+  <section>
+      <!-- filter -->
+      <mat-form-field appearance="standard">
+        <mat-label>Buscar </mat-label>
+        <input matInput (keyup)="applyFilter($event)" placeholder="Buscar" #input>
+      </mat-form-field>
+  </section>
+
+  <div class="mat-elevation-z8">
+    <table mat-table [dataSource]="dataSource" matSort (matSortChange)="sortData($event)">
+      <ng-container matColumnDef="remision">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header >REMISION</th>
+        <td mat-cell *matCellDef="let element"> {{element.remision}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="date">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header >FECHA</th>
+        <td mat-cell *matCellDef="let element"> {{element.date}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="transportLine">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header >LINEA</th>
+        <td mat-cell *matCellDef="let element"> {{element.transportLine.name}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="transportType">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>TIPO</th>
+        <td mat-cell *matCellDef="let element">
+          {{element.transportCapacity.transportType.name}}
+          {{element.transportCapacity.capacity}}
+          {{element.transportCapacity.unity}}
+         </td>
+      </ng-container>
 
 
-              </td>
-            </ng-container>
+      <ng-container matColumnDef="noSello">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header >NO. SELLO</th>
+        <td mat-cell *matCellDef="let element">{{element.noSello}}</td>
+      </ng-container>
 
-            <ng-container matColumnDef="remision">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header >REMISION</th>
-              <td mat-cell *matCellDef="let element"> {{element.remision}} </td>
-            </ng-container>
+      <ng-container matColumnDef="stock">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header >STOCK</th>
+        <td mat-cell *matCellDef="let element">
+          <nb-badge text="LIBERADOS" status="primary" style="position:static;" *ngIf="element.stock ==='LIBERADOS'"></nb-badge>
+          <nb-badge text="DiPONIBLES" status="danger"  style="position:static;" *ngIf="element.stock ==='DISPONIBLES'"></nb-badge>
+          </td>
+      </ng-container>
 
-            <ng-container matColumnDef="date">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header >FECHA</th>
-              <td mat-cell *matCellDef="let element"> {{element.date}} </td>
-            </ng-container>
+      <ng-container matColumnDef="pallets">
+        <th mat-header-cell *matHeaderCellDef >PALLETS</th>
+        <td mat-cell *matCellDef="let element">
+          <nb-badge text="Total {{element.pallets.length}}"   status="success"  style="position:static;">
+          </nb-badge>
+        </td>
+      </ng-container>
 
-            <ng-container matColumnDef="transportLine">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header >LINEA</th>
-              <td mat-cell *matCellDef="let element"> {{element.transportLine.name}} </td>
-            </ng-container>
+      <ng-container matColumnDef="status">
+        <th mat-header-cell *matHeaderCellDef> ESTATUS </th>
+        <td mat-cell *matCellDef="let element">
+          <nb-badge text="open" status="warning" style="position:static;" *ngIf="element.status ==='open'"></nb-badge>
+          <nb-badge text="closed" status="primary"  style="position:static;" *ngIf="element.status ==='close'"></nb-badge>
+        </td>
+      </ng-container>
 
-            <ng-container matColumnDef="transportType">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header>TIPO</th>
-              <td mat-cell *matCellDef="let element">
-                {{element.transportCapacity.transportType.name}}
-                {{element.transportCapacity.capacity}}
-                {{element.transportCapacity.unity}}
-               </td>
-            </ng-container>
+      <ng-container matColumnDef="actions">
+        <th mat-header-cell *matHeaderCellDef > ACCIONES </th>
+        <td mat-cell *matCellDef="let element">
+          <button mat-icon-button color="primary" (click)="addPallet(element)">
+            <mat-icon nbTooltip="Agrega Pallets">library_add</mat-icon>
+          </button>
+          <button mat-icon-button [disabled]="element.status === 'close'" color="primary" (click)="closeRemision(element)">
+            <mat-icon nbTooltip="Cerrar Remisión">done_outline</mat-icon>
+            </button>
+            <button mat-icon-button color="primary" (click)="editarClient(element)">
+              <mat-icon nbTooltip="Editar Remisión">edit</mat-icon>
+            </button>
+            <button mat-icon-button color="warn" (click)="deleteClient(element)" [disabled]="element.status === 'close'">
+              <mat-icon nbTooltip="Eliminar Remisión">delete</mat-icon>
+            </button>
+        </td>
+      </ng-container>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
+      <!-- Row shown when there is no matching data. -->
+      <tr class="mat-row" *matNoDataRow>
+      <td class="mat-cell" colspan="4">No se encontraron coincidencias "{{input.value}}"</td>
 
-            <ng-container matColumnDef="noSello">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header >NO. SELLO</th>
-              <td mat-cell *matCellDef="let element">{{element.noSello}}</td>
-            </ng-container>
+      </tr>
+    </table>
+  <!--Paginator -->
+  <mat-paginator [length]="totalRegistros" [pageSize]="totalPorPagina"
+                [pageIndex]="paginaActual" [pageSizeOptions]="pageSizeOptions"
+                (page)="paginar($event)" aria-label="arialLabel"
+                showFirstLastButtons>
+  </mat-paginator>
+  <!--End Paginator -->
 
-            <ng-container matColumnDef="pallets">
-              <th mat-header-cell *matHeaderCellDef >PALLETS</th>
-              <td mat-cell *matCellDef="let element">
-                  <mat-icon matBadge={{element.pallets.length}} matBadgeColor="primary" (click)="addPallet(element)">assignment</mat-icon>
-                    <!-- Include text description of the icon's meaning for screen-readers -->
-              </td>
-            </ng-container>
-
-            <ng-container matColumnDef="status">
-              <th mat-header-cell *matHeaderCellDef> ESTATUS</th>
-              <td mat-cell *matCellDef="let element">
-                <nb-tag-list>
-                   <nb-tag status="primary" appearance="outline" *ngIf="element.status ==='open'" text="open"></nb-tag>
-                    <nb-tag status="warning" appearance="outline" *ngIf="element.status==='close'" text="close"></nb-tag>
-              </nb-tag-list>
-              </td>
-            </ng-container>
-
-            <ng-container matColumnDef="actions">
-              <th mat-header-cell *matHeaderCellDef > ACCIONES </th>
-              <td mat-cell *matCellDef="let element">
-                  <button mat-icon-button color="primary" (click)="closeRemision(element)" [disabled]="element.status === 'close'" ><mat-icon>done_all</mat-icon>
-                  </button>
-                  <button mat-icon-button color="primary" (click)="editarClient(element)"><mat-icon>edit</mat-icon>
-                  </button>
-                  <button mat-icon-button color="warn" (click)="deleteClient(element)" [disabled]="element.status === 'close'">
-                    <mat-icon>delete</mat-icon>
-                  </button>
-              </td>
-            </ng-container>
-
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-
-            <!-- Row shown when there is no matching data. -->
-            <tr class="mat-row" *matNoDataRow>
-            <td class="mat-cell" colspan="4">No se encontraron coincidencias "{{input.value}}"</td>
-
-            </tr>
-          </table>
-        <!--Paginator -->
-        <mat-paginator [length]="totalRegistros" [pageSize]="totalPorPagina"
-                      [pageIndex]="paginaActual" [pageSizeOptions]="pageSizeOptions"
-                      (page)="paginar($event)" aria-label="arialLabel"
-                      showFirstLastButtons>
-        </mat-paginator>
-        <!--End Paginator -->
-
-        </div>
-      </section>
-    </nb-card-body>
-  </nb-card>
-</div>
-
-
-
+  </div>
+  </nb-card-body>
+</nb-card>
 
 
