--- a/src/app/pages/clients/client-create/client-create.component.html
+++ b/src/app/pages/clients/client-create/client-create.component.html
@@ -1,142 +1,143 @@
-<section>
-  <form [formGroup]="clientForm" (ngSubmit)="onSubmit()">
-  <mat-card>
-    <mat-card-title>Cliente</mat-card-title>
-    <mat-card-content>
-      <!--mat dialog content-->
-      <mat-dialog-content >
+<form [formGroup]="clientForm" (ngSubmit)="onSubmit()">
+<mat-dialog-content>
+  <div class="row" style="position: relative;">
+    <div class="col-md-12 col-lg-12 col-xxxl-12" style="position: relative;">
+      <nb-card status="primary">
+        <nb-card-header>Cliente
+          <!--
+          <nb-badge text={{checkOut?.date}} status="danger" position="top left"></nb-badge>
+          -->
+        </nb-card-header>
+        <nb-card-body>
+            <!-- grid -->
+            <div class="row">
+              <div class="col-sm-4">
+                <div class="form-group">
+                  <mat-form-field appearance="legacy">
+                    <mat-label>Cliente</mat-label>
+                    <input matInput  formControlName="name" placeholder="Digita Cliente" [ngClass]="{ 'is-invalid': submitted && f.name.errors }">
+                    <mat-error *ngIf="submitted && f.name.errors" >Campo Requerido</mat-error>
+                  </mat-form-field>
+                </div>
+              </div>
+              <div class="col-sm-4">
+                <div class="form-group">
+                  <mat-form-field appearance="legacy">
+                    <mat-label>Telefono</mat-label>
+                    <input matInput   formControlName="phone" [ngClass]="{ 'is-invalid': submitted && f.phone.errors }" placeholder="Digita Telefono">
+                    <mat-error *ngIf="submitted && f.phone.errors" >Telefono Requerio</mat-error>
+                  </mat-form-field>
+                </div>
+              </div>
+              <div class="col-sm-4">
+                <div class="form-group">
+                  <mat-form-field appearance="legacy">
+                    <mat-label>Atención</mat-label>
+                    <input matInput   formControlName="attention" [ngClass]="{ 'is-invalid': submitted && f.attention.errors }" placeholder="Digita Atención">
+                    <mat-error *ngIf="submitted && f.attention.errors" >Atención Requerio</mat-error>
+                  </mat-form-field>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-sm-8">
+                <div class="form-group">
+                  <mat-form-field appearance="legacy">
+                    <mat-label>Calle</mat-label>
+                    <input matInput  formControlName="text" [ngClass]="{ 'is-invalid': submitted && f.text.errors }" placeholder="Digita Calle">
+                    <mat-error *ngIf="submitted && f.text.errors" >Calle Requerio</mat-error>
+                  </mat-form-field>
+                </div>
+              </div>
+              <div class="col-sm-4">
+                <div class="form-group">
+                  <mat-form-field appearance="legacy">
+                    <mat-label>Colonia</mat-label>
+                    <input matInput    formControlName="colonia" [ngClass]="{ 'is-invalid': submitted && f.colonia.errors }" placeholder="Digita Colonia">
+                    <mat-error *ngIf="submitted && f.colonia.errors" >Colonia Requerio</mat-error>
+                  </mat-form-field>
+                </div>
+              </div>
+            </div>
 
-      <!-- grid -->
-      <div class="row">
-        <div class="col-sm-4">
-          <div class="form-group">
-            <mat-form-field appearance="legacy">
-              <mat-label>Cliente</mat-label>
-              <input matInput  formControlName="name" placeholder="Digita Cliente" [ngClass]="{ 'is-invalid': submitted && f.name.errors }">
-              <mat-error *ngIf="submitted && f.name.errors" >Campo Requerido</mat-error>
-            </mat-form-field>
-          </div>
-        </div>
-        <div class="col-sm-4">
-          <div class="form-group">
-            <mat-form-field appearance="legacy">
-              <mat-label>Telefono</mat-label>
-              <input matInput   formControlName="phone" [ngClass]="{ 'is-invalid': submitted && f.phone.errors }" placeholder="Digita Telefono">
-              <mat-error *ngIf="submitted && f.phone.errors" >Telefono Requerio</mat-error>
-            </mat-form-field>
-          </div>
-        </div>
-        <div class="col-sm-4">
-          <div class="form-group">
-            <mat-form-field appearance="legacy">
-              <mat-label>Atención</mat-label>
-              <input matInput   formControlName="attention" [ngClass]="{ 'is-invalid': submitted && f.attention.errors }" placeholder="Digita Atención">
-              <mat-error *ngIf="submitted && f.attention.errors" >Atención Requerio</mat-error>
-            </mat-form-field>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-sm-8">
-          <div class="form-group">
-            <mat-form-field appearance="legacy">
-              <mat-label>Calle</mat-label>
-              <input matInput  formControlName="text" [ngClass]="{ 'is-invalid': submitted && f.text.errors }" placeholder="Digita Calle">
-              <mat-error *ngIf="submitted && f.text.errors" >Calle Requerio</mat-error>
-            </mat-form-field>
-          </div>
-        </div>
-        <div class="col-sm-4">
-          <div class="form-group">
-            <mat-form-field appearance="legacy">
-              <mat-label>Colonia</mat-label>
-              <input matInput    formControlName="colonia" [ngClass]="{ 'is-invalid': submitted && f.colonia.errors }" placeholder="Digita Colonia">
-              <mat-error *ngIf="submitted && f.colonia.errors" >Colonia Requerio</mat-error>
-            </mat-form-field>
-          </div>
-        </div>
-      </div>
+            <div class="row">
+              <div class="col-sm-4">
+                <div class="form-group">
+                  <mat-form-field appearance="legacy">
+                    <mat-label>Municipio</mat-label>
+                    <input matInput  formControlName="district" [ngClass]="{ 'is-invalid': submitted && f.district.errors }" placeholder="Digita Municipio">
+                    <mat-error *ngIf="submitted && f.district.errors" >Municipio Requerio</mat-error>
+                  </mat-form-field>
+                </div>
+              </div>
+              <div class="col-sm-4">
+                <div class="form-group">
+                  <mat-form-field appearance="legacy">
+                    <mat-label>Estado</mat-label>
+                    <input matInput   formControlName="state" [ngClass]="{ 'is-invalid': submitted && f.state.errors }" placeholder="Digita Estado">
+                    <mat-error *ngIf="submitted && f.state.errors" >Estado Requerio</mat-error>
+                  </mat-form-field>
+                </div>
+              </div>
+              <div class="col-sm-4">
+                <div class="form-group">
+                  <mat-form-field appearance="legacy">
+                    <mat-label>Ciudad</mat-label>
+                    <input matInput  formControlName="city" [ngClass]="{ 'is-invalid': submitted && f.city.errors }" placeholder="Digita Codigo Postal">
+                    <mat-error *ngIf="submitted && f.city.errors" >Ciudad Requerio</mat-error>
+                  </mat-form-field>
+                </div>
+              </div>
+            </div>
 
-      <div class="row">
-        <div class="col-sm-4">
-          <div class="form-group">
-            <mat-form-field appearance="legacy">
-              <mat-label>Municipio</mat-label>
-              <input matInput  formControlName="district" [ngClass]="{ 'is-invalid': submitted && f.district.errors }" placeholder="Digita Municipio">
-              <mat-error *ngIf="submitted && f.district.errors" >Municipio Requerio</mat-error>
-            </mat-form-field>
-          </div>
-        </div>
-        <div class="col-sm-4">
-          <div class="form-group">
-            <mat-form-field appearance="legacy">
-              <mat-label>Estado</mat-label>
-              <input matInput   formControlName="state" [ngClass]="{ 'is-invalid': submitted && f.state.errors }" placeholder="Digita Estado">
-              <mat-error *ngIf="submitted && f.state.errors" >Estado Requerio</mat-error>
-            </mat-form-field>
-          </div>
-        </div>
-        <div class="col-sm-4">
-          <div class="form-group">
-            <mat-form-field appearance="legacy">
-              <mat-label>Ciudad</mat-label>
-              <input matInput  formControlName="city" [ngClass]="{ 'is-invalid': submitted && f.city.errors }" placeholder="Digita Codigo Postal">
-              <mat-error *ngIf="submitted && f.city.errors" >Ciudad Requerio</mat-error>
-            </mat-form-field>
-          </div>
-        </div>
-      </div>
+            <div class="row">
+              <div class="col-sm-4">
+                <div class="form-group">
+                  <mat-form-field appearance="legacy">
+                    <mat-label>Codigo Postal</mat-label>
+                    <input matInput   formControlName="postalCode" [ngClass]="{ 'is-invalid': submitted && f.postalCode.errors }" placeholder="Digita Codigo Postal">
+                    <mat-error *ngIf="submitted && f.postalCode.errors" >Codigo Postal Requerio</mat-error>
+                  </mat-form-field>
+                </div>
+              </div>
+              <div class="col-sm-4">
+                <div class="form-group">
+                  <mat-form-field appearance="legacy">
+                    <mat-label>Pais</mat-label>
+                    <input matInput  formControlName="country" [ngClass]="{ 'is-invalid': submitted && f.country.errors }" placeholder="Digita Pais">
+                    <mat-error *ngIf="submitted && f.country.errors" >Pais Requerio</mat-error>
+                  </mat-form-field>
+                </div>
+              </div>
 
-      <div class="row">
-        <div class="col-sm-4">
-          <div class="form-group">
-            <mat-form-field appearance="legacy">
-              <mat-label>Codigo Postal</mat-label>
-              <input matInput   formControlName="postalCode" [ngClass]="{ 'is-invalid': submitted && f.postalCode.errors }" placeholder="Digita Codigo Postal">
-              <mat-error *ngIf="submitted && f.postalCode.errors" >Codigo Postal Requerio</mat-error>
-            </mat-form-field>
-          </div>
-        </div>
-        <div class="col-sm-4">
-          <div class="form-group">
-            <mat-form-field appearance="legacy">
-              <mat-label>Pais</mat-label>
-              <input matInput  formControlName="country" [ngClass]="{ 'is-invalid': submitted && f.country.errors }" placeholder="Digita Pais">
-              <mat-error *ngIf="submitted && f.country.errors" >Pais Requerio</mat-error>
-            </mat-form-field>
-          </div>
-        </div>
+              <div class="col-sm-4">
+                <div class="form-group">
+                  <mat-form-field #field floatLabel="always" appearance="legacy" >
+                    <mat-label>Estatus</mat-label>
+                    <input matInput hidden formControlName="isActive">
+                    <mat-radio-group  class="flex-wrap" formControlName="isActive" [ngClass]="{ 'is-invalid': submitted && f.isActive.errors }">
+                      <mat-radio-button  class="radio-button" [value]="true"  [checked]="isChecked===true">Activo</mat-radio-button>
+                      <mat-radio-button  class="radio-button" [value]="false" [checked]="isChecked===false">Inactivo</mat-radio-button>
+                    </mat-radio-group>
+                    <mat-error>Estatus Requerio</mat-error>
+                  </mat-form-field>
+                </div>
+              </div>
 
-        <div class="col-sm-4">
-          <div class="form-group">
-            <mat-form-field #field floatLabel="always" appearance="legacy" >
-              <mat-label>Estatus</mat-label>
-              <input matInput hidden formControlName="isActive">
-              <mat-radio-group  class="flex-wrap" formControlName="isActive" [ngClass]="{ 'is-invalid': submitted && f.isActive.errors }">
-                <mat-radio-button  class="radio-button" [value]="true"  [checked]="isChecked===true">Activo</mat-radio-button>
-                <mat-radio-button  class="radio-button" [value]="false" [checked]="isChecked===false">Inactivo</mat-radio-button>
-              </mat-radio-group>
-              <mat-error>Estatus Requerio</mat-error>
-            </mat-form-field>
-          </div>
-        </div>
+            </div>
+            <!-- end grid-->
+        </nb-card-body>
+      </nb-card>
+    </div>
+  </div>
+</mat-dialog-content>
 
-      </div>
-      <!-- end grid-->
+  <mat-dialog-actions align="end">
+    <button nbButton hero shape="semi-round" size="small" status="danger"
+      [mat-dialog-close]="false" >Cancelar</button>
 
-      </mat-dialog-content>
-      <!-- mat dialog content -->
+    <button nbButton  hero shape="semi-round" size="small" status="primary"
+     cdkFocusInitial style="float: left;">{{actionBtn}}</button>
 
-    </mat-card-content>
-
-    <!-- actions -->
-    <mat-card-actions align="end">
-      <mat-dialog-actions align="end">
-        <button mat-flat-button [mat-dialog-close]="false" color="warn" >Cancelar</button>
-        <button mat-flat-button color="primary" cdkFocusInitial>{{actionBtn}}</button>
-      </mat-dialog-actions>
-    </mat-card-actions>
-    <!--end actions -->
-  </mat-card>
+</mat-dialog-actions>
 </form>
-  </section>
